# TestService

./: Dockerfile  README.md  pyproject.toml
kube/: cr_service.yml  deployment.yml  ingress.yml  second_ingress.yml  service.yml
test_service/: app.py
