[tool.poetry]
name = "test-service"
version = "0.1.0"
description = ""
authors = ["Austin Graham <austingraham731@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
